Alterações no JWT

--- a/ProjetoEduXG8/ProjetoEduXG8.csproj
+++ b/ProjetoEduXG8/ProjetoEduXG8.csproj
@@ -25,5 +25,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwRoot\upload\imagens\" />
+  </ItemGroup>
+
 
 </Project>
